objects/INX_Resolution__c.object
<CustomObject>
    <description>Stores resolution created in Infinit</description>
    <fields>
        <fullName>INX_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_File_Path__c</fullName>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Hash__c</fullName>
        <label>Commit (hash)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Repository__c</fullName>
        <label>Repository</label>
        <referenceTo>INX_Repository__c</referenceTo>
        <relationshipLabel>Resolutions</relationshipLabel>
        <relationshipName>Resolutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Resolution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Hash__c</columns>
        <columns>INX_Email__c</columns>
        <columns>INX_File_Path__c</columns>
        <columns>INX_Repository__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>